test/fixtures/public/fail/semantic/simple_length.jmm
/*  REASON:
    Builtin "length" does not exist over simple types.
*/

class T {
    public static void main(String[] a) { 
        int i;
        int[] x;
        x = new int[10];
        i = 0.length; // error
        i = true.length; // error
        i = x.length;
    }
}
